# audiochecklist

./: .env  .gitignore  LICENSE  Pipfile  README.md  audiochecklist.cfg.sample  audiochecklist.py  build.sh  build_audio.py  buildozer.spec  checklist.org  checklist.py  checklist_flight_planning.org  config.ini  logcat.sh  main.py  pyproject.toml  rebuild.sh  run_on_tablet.sh  texttospeech.py  utils.py
checklists/: como_c172.org  sabadell_c152.org
